Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127112

QProgressBar with Windows 11 style is using far too much cpu

XMLWordPrintable

    • Windows
    • 384acdc1c (dev), 4b4c5b06a (6.8), c109877ca (6.7)

      With the Windows 11 style, an indeterminate QProgressBar uses 100% of a cpu core on the main thread. In QWindows11Style::drawControl with QStyle::CE_ProgressBarContents, Qt always sends an update() when drawing the progress bar when isIndeterminate is true.

      This problem is not present with the Windows Vista style since it uses a QProgressStyleAnimation.

        1. QProgressBarCpu.zip
          1 kB
          Mathieu Genesse-Grenier
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            mgenessegrenier Mathieu Genesse-Grenier
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes